--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "lint": "eslint --fix .",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -20,6 +21,8 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.16.0",
+    "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.14",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.24",
