--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,12 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "prisma": "^3.14.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@prisma/client": "^3.14.0",
     "express": "^4.18.1"
   }
 }
