--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -21,6 +21,10 @@
       "no-extra-semi": "error",
       "eol-last": ["error", "always"],
       "no-multiple-empty-lines": ["error", {"max": 2, "maxEOF": 0}],
-      "space-before-function-paren": ["error", "never"]
+      "space-before-function-paren": ["error", {
+        "anonymous": "never",
+        "named": "never",
+        "asyncArrow": "always"
+      }]
     }
 }
