--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.38",
+    "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemailer": "^6.7.5"
   }
 }
