--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^28.1.0",
     "prisma": "^3.14.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
