--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/core": "^1.2.197",
+    "@swc/jest": "^0.2.21",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.1",
     "@types/node": "^17.0.38",
     "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -23,6 +26,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.0",
     "prisma": "^3.14.0",
+    "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
   },
