--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -5,6 +5,11 @@
     "semi": ["error", "never"],
     "no-extra-semi": "error",
     "eol-last": ["error", "always"],
-    "no-multiple-empty-lines": ["error", {"max": 2, "maxEOF": 0}]
+    "no-multiple-empty-lines": ["error", {"max": 2, "maxEOF": 0}],
+    "space-before-function-paren": ["error", {
+      "anonymous": "never",
+      "named": "never",
+      "asyncArrow": "always"
+    }]
   }
 }
