--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,17 +10,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@gorhom/bottom-sheet": "^4",
     "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "phosphor-react-native": "^1.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-plugin-react": "^7.30.0",
     "typescript": "~4.3.5"
   },
   "private": true
